elk/service.yaml

# services.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-service
  namespace: default
spec:
  selector:
    app: elk-app
  ports:
    - protocol: TCP
      targetPort: 9200
      sourcePort: 8080
