elk/networkpolicy.yaml

# networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: elk-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: elk-app
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: elk-app
